crates/lang-lower/tests/snapshots/lower__assignments_const_const_assignment_workbench.snap
---
source: crates/lang-lower/tests/lower.rs
expression: "lower :: to_ron(& ir).expect(\"No error\")"
---
(
    items: (
        workbenches: [
            (
                keyword_ref: "3:1 @ 6d8073256c5d59ea (130..136)",
                visibility: Private,
                kind: (
                    value: Sketch,
                    src_ref: "3:1 @ 6d8073256c5d59ea (130..305)",
                ),
                id: ((
                    value: "MySketch",
                    src_ref: "3:8 @ 6d8073256c5d59ea (137..145)",
                )),
                parameters: ((
                    value: [
                        (id: ((value: "text", src_ref: "3:17 @ 6d8073256c5d59ea (146..150)")), specified_type: Some(((value: String, src_ref: "3:23 @ 6d8073256c5d59ea (152..158)"))), src_ref: "3:17 @ 6d8073256c5d59ea (146..158)"),
                    ],
                    src_ref: "3:17 @ 6d8073256c5d59ea (146..158)",
                )),
                inits: ([
                    (
                        keyword_ref: "7:5 @ 6d8073256c5d59ea (243..247)",
                        parameters: ((value: [], src_ref: "7:10 @ 6d8073256c5d59ea (248..248)")),
                        statements: ([(attr: (()), src_ref: "8:9 @ 6d8073256c5d59ea (260..271)", visibility: Private, id: Some(((value: "text", src_ref: "8:9 @ 6d8073256c5d59ea (260..264)"))), expression: Name(((value: [((value: "TEXT", src_ref: "8:16 @ 6d8073256c5d59ea (267..271)"))], src_ref: "8:16 @ 6d8073256c5d59ea (267..271)"))))]),
                        src_ref: "7:5 @ 6d8073256c5d59ea (243..284)",
                    ),
                ]),
                items: (
                    constants: [
                        (src_ref: "5:5 @ 6d8073256c5d59ea (216..236)", visibility: Private, keyword_src_ref: "5:5 @ 6d8073256c5d59ea (216..221)", id: ((value: "TEXT", src_ref: "5:11 @ 6d8073256c5d59ea (222..226)")), expr: FormatString(((value: [String((value: "Hello", src_ref: "5:18 @ 6d8073256c5d59ea (229..236)"))], src_ref: "5:18 @ 6d8073256c5d59ea (229..236)")))),
                    ],
                ),
                statements: ([
                    (
                        attr: (()),
                        src_ref: "11:5 @ 6d8073256c5d59ea (284..300)",
                        visibility: Public,
                        expression: Call((name: ((value: [((value: "std", src_ref: "11:5 @ 6d8073256c5d59ea (284..287)")), ((value: "print", src_ref: "11:10 @ 6d8073256c5d59ea (289..294)"))], src_ref: "11:5 @ 6d8073256c5d59ea (284..294)")), argument_list: (src_ref: "11:16 @ 6d8073256c5d59ea (295..299)", unnamed_args: [(expression: Name(((value: [((value: "text", src_ref: "11:16 @ 6d8073256c5d59ea (295..299)"))], src_ref: "11:16 @ 6d8073256c5d59ea (295..299)"))), src_ref: "11:16 @ 6d8073256c5d59ea (295..299)")]), src_ref: "11:5 @ 6d8073256c5d59ea (284..300)")),
                    ),
                ]),
            ),
        ],
    ),
    statements: ([
        (
            attr: (()),
            src_ref: "14:1 @ 6d8073256c5d59ea (305..315)",
            visibility: Public,
            expression: Call((
                name: ((
                    value: [
                        ((value: "MySketch", src_ref: "14:1 @ 6d8073256c5d59ea (305..313)")),
                    ],
                    src_ref: "14:1 @ 6d8073256c5d59ea (305..313)",
                )),
                argument_list: (
                    src_ref: "14:10 @ 6d8073256c5d59ea (314..314)",
                ),
                src_ref: "14:1 @ 6d8073256c5d59ea (305..315)",
            )),
        ),
    ]),
)
