crates/lang-lower/tests/snapshots/lower__assignments_model_assignment_model_module.snap
---
source: crates/lang-lower/tests/lower.rs
expression: "lower :: to_ron(& ir).expect(\"No error\")"
---
(
    items: (
        inline_modules: [
            (
                src_ref: "3:1 @ 8db2b4a6974e7a37 (124..193)",
                visibility: Private,
                keyword_ref: "3:1 @ 8db2b4a6974e7a37 (124..127)",
                id: ((
                    value: "my_module",
                    src_ref: "3:5 @ 8db2b4a6974e7a37 (128..137)",
                )),
            ),
        ],
    ),
)
