crates/lang-lower/tests/snapshots/lower__assignments_property_prop_assignment.snap
---
source: crates/lang-lower/tests/lower.rs
expression: "lower :: to_ron(& ir).expect(\"No error\")"
---
(
    items: (
        workbenches: [
            (
                keyword_ref: "3:1 @ c0664ef29f987657 (111..117)",
                visibility: Private,
                kind: (
                    value: Sketch,
                    src_ref: "3:1 @ c0664ef29f987657 (111..211)",
                ),
                id: ((
                    value: "MySketch",
                    src_ref: "3:8 @ c0664ef29f987657 (118..126)",
                )),
                parameters: ((
                    value: [
                        (id: ((value: "radius", src_ref: "3:17 @ c0664ef29f987657 (127..133)")), specified_type: Some(((value: Quantity(Length), src_ref: "3:25 @ c0664ef29f987657 (135..141)"))), src_ref: "3:17 @ c0664ef29f987657 (127..141)"),
                    ],
                    src_ref: "3:17 @ c0664ef29f987657 (127..141)",
                )),
                statements: ([
                    (
                        attr: (()),
                        src_ref: "4:5 @ c0664ef29f987657 (149..175)",
                        visibility: Public,
                        keyword_src_ref: "4:5 @ c0664ef29f987657 (149..153)",
                        id: Some(((value: "diameter", src_ref: "4:10 @ c0664ef29f987657 (154..162)"))),
                        expression: BinaryOp((lhs: Name(((value: [((value: "radius", src_ref: "4:21 @ c0664ef29f987657 (165..171)"))], src_ref: "4:21 @ c0664ef29f987657 (165..171)"))), op: (value: "*", src_ref: "4:28 @ c0664ef29f987657 (172..173)"), rhs: Literal(((value: Integer(2), src_ref: "4:30 @ c0664ef29f987657 (174..175)"))), src_ref: "4:21 @ c0664ef29f987657 (165..175)")),
                    ),
                    (
                        attr: (()),
                        src_ref: "5:5 @ c0664ef29f987657 (181..207)",
                        visibility: Public,
                        expression: Call((name: ((value: [((value: "std", src_ref: "5:5 @ c0664ef29f987657 (181..184)")), ((value: "geo2d", src_ref: "5:10 @ c0664ef29f987657 (186..191)")), ((value: "Circle", src_ref: "5:17 @ c0664ef29f987657 (193..199)"))], src_ref: "5:5 @ c0664ef29f987657 (181..199)")), argument_list: (src_ref: "5:24 @ c0664ef29f987657 (200..206)", unnamed_args: [(expression: Name(((value: [((value: "radius", src_ref: "5:24 @ c0664ef29f987657 (200..206)"))], src_ref: "5:24 @ c0664ef29f987657 (200..206)"))), src_ref: "5:24 @ c0664ef29f987657 (200..206)")]), src_ref: "5:5 @ c0664ef29f987657 (181..207)")),
                    ),
                ]),
            ),
        ],
    ),
    statements: ([
        (
            attr: (()),
            src_ref: "7:1 @ c0664ef29f987657 (211..265)",
            visibility: Public,
            expression: Call((
                name: ((
                    value: [
                        ((value: "std", src_ref: "7:1 @ c0664ef29f987657 (211..214)")),
                        ((value: "debug", src_ref: "7:6 @ c0664ef29f987657 (216..221)")),
                        ((value: "assert_eq", src_ref: "7:13 @ c0664ef29f987657 (223..232)")),
                    ],
                    src_ref: "7:1 @ c0664ef29f987657 (211..232)",
                )),
                argument_list: (
                    src_ref: "7:23 @ c0664ef29f987657 (233..263)",
                    unnamed_args: [
                        (expression: ArrayExpression((inner: List([PropertyAccess((lhs: Call((name: ((value: [((value: "MySketch", src_ref: "7:24 @ c0664ef29f987657 (234..242)"))], src_ref: "7:24 @ c0664ef29f987657 (234..242)")), argument_list: (src_ref: "7:33 @ c0664ef29f987657 (243..246)", unnamed_args: [(expression: Literal(((value: Quantity((value: 50.0, quantity_type: Length, unit: Centimeter)), src_ref: "7:33 @ c0664ef29f987657 (243..246)"))), src_ref: "7:33 @ c0664ef29f987657 (243..246)")]), src_ref: "7:24 @ c0664ef29f987657 (234..247)")), element: ((value: "diameter", src_ref: "7:38 @ c0664ef29f987657 (248..256)")), src_ref: "7:24 @ c0664ef29f987657 (234..256)")), Literal(((value: Quantity((value: 100.0, quantity_type: Length, unit: Centimeter)), src_ref: "7:48 @ c0664ef29f987657 (258..262)")))]), unit: r#None, src_ref: "7:23 @ c0664ef29f987657 (233..263)")), src_ref: "7:23 @ c0664ef29f987657 (233..263)"),
                    ],
                ),
                src_ref: "7:1 @ c0664ef29f987657 (211..265)",
            )),
        ),
    ]),
)
